update to upload-image request body: title->post_id
