# cmd/app/docs/swagger.json
@@ -746,8 +746,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Title of the post",
-                        "name": "title",
+                        "description": "ID of the post",
+                        "name": "post_id",
                         "in": "formData",
                         "required": true
                     },
@@ -1308,6 +1308,9 @@
             "type": "object",
             "properties": {
                 "active_orders": {
+                    "type": "integer"
+                },
+                "completed_orders": {
                     "type": "integer"
                 },
                 "pending_orders": {
